k8s/service2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: service2:local           # image built into minikube's docker
        imagePullPolicy: Never
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
